--- a/App/Views/includes/reviews.html
+++ b/App/Views/includes/reviews.html
@@ -1,14 +1,14 @@
 <section class="reviews" id="reviews">
-    <div class="review review--hidden">
-        <p class="review__text">
-            <span>
+    <div class="review">
+        <p class="review__p">
+            <span class="review__text review__text--hidden">
                 “Miluji její humor i hloubku vhledů, které srozumitelně předává jednotlivcům i skupině. Její improvizační doprovázení je jedinečné.”
             </span>
-            <svg viewBox="0 0 71 73" preserveAspectRatio="none" class="review__leaf review__leaf--visible">
+            <svg viewBox="0 0 71 73" preserveAspectRatio="none" class="review__leaf review__leaf--hidden">
                 <use xlink:href="#leaf"></use>
             </svg>
         </p>
-        <div class="review__person">
+        <div class="review__person review__person--hidden">
             <div class="review__photo">
                 <svg viewBox="0 0 253 273" preserveAspectRatio="none" class="review__wooden-plate">
                     <use xlink:href="#woodenPlate"></use>
@@ -20,16 +20,16 @@
             </h5>
         </div>
     </div>
-    <div class="review review--hidden">
-        <p class="review__text">
-            <span>
+    <div class="review">
+        <p class="review__p">
+            <span class="review__text review__text--hidden">
                 “Spolupráce s Táňou je vždy povzbuzující, povznášející a podnětná. Pohlazení po duši. První seminář s Táňou měl u klientů takový úspěch, že ji musím zvát znovu a znovu a znovu.”
             </span>
-            <svg viewBox="0 0 71 73" preserveAspectRatio="none" class="review__leaf">
+            <svg viewBox="0 0 71 73" preserveAspectRatio="none" class="review__leaf review__leaf--hidden">
                 <use xlink:href="#leaf"></use>
             </svg>
         </p>
-        <div class="review__person">
+        <div class="review__person review__person--hidden">
             <div class="review__photo">
                 <svg viewBox="0 0 253 273" preserveAspectRatio="none" class="review__wooden-plate">
                     <use xlink:href="#woodenPlate"></use>
@@ -41,16 +41,37 @@
             </h5>
         </div>
     </div>
-    <div class="review review--hidden">
-        <p class="review__text">
-            <span>
-                “Táňa Horká a způsob její práce mě zásadně ovlivnil jak v profesním, ale i osobním životě.”   
+    <div class="review">
+        <p class="review__p">
+            <span class="review__text review__text--hidden">
+                “Spolupráce s Táňou je pro mě plná radosti, nápadů, inspirace a smíchu. S touto směsí se nádherně a lehkostí pracuje.”
             </span>
-            <svg viewBox="0 0 71 73" preserveAspectRatio="none" class="review__leaf">       
+            <svg viewBox="0 0 71 73" preserveAspectRatio="none" class="review__leaf review__leaf--hidden">
                 <use xlink:href="#leaf"></use>
             </svg>
         </p>
-        <div class="review__person">
+        <div class="review__person review__person--hidden">
+            <div class="review__photo">
+                <svg viewBox="0 0 253 273" preserveAspectRatio="none" class="review__wooden-plate">
+                    <use xlink:href="#woodenPlate"></use>
+                </svg>
+                <img src="img/review_stastna.png" class="review__img"></img>
+            </div>
+            <h5 class="heading-5">
+                Jana Šťastná
+            </h5>
+        </div>
+    </div>
+    <div class="review">
+        <p class="review__p">
+            <span class="review__text review__text--hidden">
+                “Táňa Horká a způsob její práce mě zásadně ovlivnil jak v profesním, ale i osobním životě.”   
+            </span>
+            <svg viewBox="0 0 71 73" preserveAspectRatio="none" class="review__leaf review__leaf--hidden">       
+                <use xlink:href="#leaf"></use>
+            </svg>
+        </p>
+        <div class="review__person review__person--hidden">
             <div class="review__photo">
                 <svg viewBox="0 0 253 273" preserveAspectRatio="none" class="review__wooden-plate">
                     <use xlink:href="#woodenPlate"></use>
@@ -62,16 +83,16 @@
             </h5>
         </div>
     </div>
-    <div class="review review--hidden">
-        <p class="review__text">
-            <span>
+    <div class="review">
+        <p class="review__p">
+            <span class="review__text review__text--hidden">
                 “Taťjana a její program mi pomohli si znovu uvědomit vzájemné pochopení a toleranci, což jsou podle mne jedny z nejvyšších životních hodnot.” 
             </span>
-                    <svg viewBox="0 0 71 73" preserveAspectRatio="none" class="review__leaf">
+                    <svg viewBox="0 0 71 73" preserveAspectRatio="none" class="review__leaf review__leaf--hidden">
                 <use xlink:href="#leaf"></use>
             </svg>
         </p>
-        <div class="review__person">
+        <div class="review__person review__person--hidden">
             <div class="review__photo">
                 <svg viewBox="0 0 253 273" preserveAspectRatio="none" class="review__wooden-plate">
                     <use xlink:href="#woodenPlate"></use>
@@ -83,16 +104,16 @@
             </h5>
         </div>
     </div>
-    <div class="review review--hidden">
-        <p class="review__text">
-            <span>
+    <div class="review">
+        <p class="review__p">
+            <span class="review__text review__text--hidden">
                 “Učím sa od ní nebrať sa príliš vážne, nadľahčovať ,prijímať,  baviť sa a milovať život aj v časoch, keď nám nie je zrovna najveselšie.”      
             </span>
-                  <svg viewBox="0 0 71 73" preserveAspectRatio="none" class="review__leaf">
+                  <svg viewBox="0 0 71 73" preserveAspectRatio="none" class="review__leaf review__leaf--hidden">
                 <use xlink:href="#leaf"></use>
             </svg>
         </p>
-        <div class="review__person">
+        <div class="review__person review__person--hidden">
             <div class="review__photo">
                 <svg viewBox="0 0 253 273" preserveAspectRatio="none" class="review__wooden-plate">
                     <use xlink:href="#woodenPlate"></use>
