--- a/public/css/style.css
+++ b/public/css/style.css
@@ -671,8 +671,8 @@ a:link {
     position: absolute;
     z-index: 50; }
     .organizations__svg--elipse {
-      width: 50rem;
-      height: 50rem;
+      width: 45rem;
+      height: 45rem;
       top: 30rem;
       left: 50%;
       transform: translateY(-50%) translateX(-50%); }
@@ -716,10 +716,10 @@ a:link {
     transform: translateY(-50%) translateX(-50%); }
     .organizations .heading-3::after {
       content: "";
-      width: 30rem;
-      height: 30rem;
+      width: 40rem;
+      height: 40rem;
       border-radius: 50%;
-      background-image: radial-gradient(#ffffff 90%, transparent);
+      background-image: radial-gradient(#ffffff 57%, transparent 70%);
       display: block;
       position: absolute;
       top: 50%;
@@ -734,7 +734,7 @@ a:link {
     z-index: 2; }
   .organizations__bg {
     height: 40rem;
-    background: linear-gradient(96.16deg, #616160 1.42%, #9FBF73 109.66%);
+    background: #9CBD6F;
     opacity: 0.1;
     clip-path: url(#organizations-clip-path); }
     @media screen and (max-width: 500px) {
