--- a/src/client/scss/sections/_organizations.scss
+++ b/src/client/scss/sections/_organizations.scss
@@ -15,8 +15,8 @@ $bp-organizations-mobile: 800px;
         z-index: 50;
 
         &--elipse {
-            width: 50rem;
-            height: 50rem;
+            width: 45rem;
+            height: 45rem;
 
             top: 30rem;
             left: 50%;
@@ -77,10 +77,10 @@ $bp-organizations-mobile: 800px;
 
         &::after {
             content: "";
-            width: 30rem;
-            height: 30rem;
+            width: 40rem;
+            height: 40rem;
             border-radius: 50%;
-            background-image: radial-gradient($color-white 90%, transparent) ;
+            background-image: radial-gradient($color-white 57%, transparent 70%) ;
 
             display: block;
 
@@ -101,7 +101,7 @@ $bp-organizations-mobile: 800px;
     }
     &__bg {
         height: 40rem;
-        background: linear-gradient(96.16deg, #616160 1.42%, #9FBF73 109.66%);
+        background: $color-green;
         opacity: 0.1;
         clip-path: url(#organizations-clip-path);
 
