--- a/public/css/style.css
+++ b/public/css/style.css
@@ -21,13 +21,16 @@
   0% {
     opacity: 1; }
   100% {
-    opacity: 0; } }
+    opacity: 0;
+    filter: blur(0.3px); } }
 
 @keyframes reviewAppear {
   0% {
-    opacity: 0; }
+    opacity: 0;
+    filter: blur(0.3px); }
   100% {
-    opacity: 1; } }
+    opacity: 1;
+    filter: none; } }
 
 *,
 *::before,
@@ -130,13 +133,13 @@ a:link {
       margin-bottom: 5rem;
       flex-direction: column;
       align-items: center; } }
-  @media screen and (max-width: 900px) {
+  @media screen and (max-width: 800px) {
     .cooperation-way {
       height: auto;
       margin-bottom: 10rem; } }
   .cooperation-way .heading-4 {
     margin-bottom: 3rem; }
-    @media screen and (max-width: 900px) {
+    @media screen and (max-width: 800px) {
       .cooperation-way .heading-4 {
         text-align: center; } }
   .cooperation-way__text {
@@ -183,7 +186,7 @@ a:link {
         width: 18rem;
         height: 18rem;
         margin-top: auto; } }
-    @media screen and (max-width: 900px) {
+    @media screen and (max-width: 800px) {
       .cooperation-way__drawing {
         margin-top: 2rem; } }
 
@@ -207,14 +210,17 @@ a:link {
       flex-direction: column; } }
   .review__person {
     position: relative; }
+    @media screen and (max-width: 800px) {
+      .review__person {
+        width: 100%; } }
     .review__person--hidden {
       display: none; }
     .review__person--hiding {
       display: flex;
-      animation: reviewDisappear 3s forwards; }
+      animation: reviewDisappear 2s forwards; }
     .review__person--visible {
       display: flex;
-      animation: reviewAppear 3s forwards; }
+      animation: reviewAppear 2s forwards; }
     @media screen and (max-width: 1400px) {
       .review__person {
         margin-left: auto;
@@ -249,7 +255,8 @@ a:link {
         margin-left: 12rem; } }
     @media screen and (max-width: 800px) {
       .review__p {
-        margin: 0;
+        margin-left: 0;
+        margin-top: 5rem;
         font-size: 1.6rem;
         order: 1; } }
     @media screen and (max-width: 350px) {
@@ -267,10 +274,10 @@ a:link {
       display: none; }
     .review__leaf--hiding {
       display: block;
-      animation: leafFall 5s linear forwards; }
+      animation: leafFall 4s linear forwards; }
     .review__leaf--visible {
       display: block;
-      animation: reviewAppear 3s forwards; }
+      animation: reviewAppear 2s forwards; }
     @media screen and (max-width: 800px) {
       .review__leaf {
         width: 5rem;
@@ -291,8 +298,11 @@ a:link {
     height: 100%;
     position: absolute;
     z-index: -1; }
+    @media screen and (max-width: 800px) {
+      .review__wooden-plate {
+        width: 15rem;
+        height: 17rem; } }
   .review__photo {
-    width: 100%;
     width: 20rem;
     height: 25rem;
     display: flex;
@@ -301,26 +311,26 @@ a:link {
     position: relative; }
     @media screen and (max-width: 800px) {
       .review__photo {
-        width: 15rem;
-        height: 17rem; } }
+        width: 100%;
+        height: 100%; } }
   .review .heading-5 {
     width: 100%;
     font-size: 2.2rem;
     font-weight: 500;
     text-align: center;
     position: absolute;
-    bottom: -8rem; }
+    bottom: -4rem; }
     @media screen and (max-width: 800px) {
       .review .heading-5 {
-        width: 120%; } }
+        bottom: -8rem; } }
   .review__text--hidden {
     display: none; }
   .review__text--hiding {
     display: flex;
-    animation: reviewDisappear 3s forwards; }
+    animation: reviewDisappear 2s forwards; }
   .review__text--visible {
     display: flex;
-    animation: reviewAppear 3s forwards; }
+    animation: reviewAppear 2s forwards; }
 
 .cooperation {
   width: 100%;
@@ -1244,4 +1254,4 @@ a:link {
   flex-direction: column; }
   @media screen and (max-width: 800px) {
     .reviews {
-      height: 75rem; } }
+      height: 70rem; } }
