--- a/src/client/scss/abstracts/_animations.scss
+++ b/src/client/scss/abstracts/_animations.scss
@@ -35,14 +35,17 @@
     }
     100% {
         opacity: 0;
+        filter: blur(.3px);
     }
 }
 
 @keyframes reviewAppear {
     0% {
         opacity: 0;
+        filter: blur(.3px);
     }
     100% {
         opacity: 1;
+        filter: none;
     }
 }
