--- a/src/client/scss/sections/_topics.scss
+++ b/src/client/scss/sections/_topics.scss
@@ -88,6 +88,9 @@
             @media only screen and (max-width: 800px) {
                 display: none;
             }
+            @media only screen and (-ms-high-contrast: none), (-ms-high-contrast: active) {
+                padding-right: 5rem;
+            }
         }
         &__mobile {
             height: 100vw;
@@ -109,6 +112,9 @@
             padding: 5rem;
 
             overflow-wrap: normal;
+        }
+        @media only screen and (-ms-high-contrast: none), (-ms-high-contrast: active) {
+            width: 100rem;
         }
 
         &__head {
