More spacing fixes

--- a/App/Views/includes/cooperation.html
+++ b/App/Views/includes/cooperation.html
@@ -6,9 +6,9 @@
         <div class="cooperation-way">
             <div class="cooperation-way__content">
                 <h4 class="heading-4">Rezonance</h4>
-                <div class="cooperation-way__text">
+                <p class="paragraph-1">
                     Když to se nou rezonuje, když to s tebou rezonuje, přišel okamžik, kdy se můžeme setkat.
-                </div>
+                </p>
             </div>
             <svg viewBox="0 0 293 221" preserveAspectRatio="none" fill="none" xmlns="http://www.w3.org/2000/svg" class="cooperation-way__drawing cooperation-way__drawing--resonance">
                 <use xlink:href="#resonance"></use>
@@ -16,11 +16,11 @@
         </div>
         <div class="cooperation-way">
             <div class="cooperation-way__content">
-                <h4 class="heading-4">Dynamika skupny</h4>
-                <div class="cooperation-way__text">
+                <h4 class="heading-4">Dynamika skupiny</h4>
+                <p class="paragraph-1">
                     V dynamice skupiny vidím obrovský potenciál, velkou sílu, obohacení a inspiraci pro rozvoj každého z nás. Miluji sdílení příběhů a propojování v bytostném naladění se
                     na život.                 
-                </div>
+                </p>
             </div>
             <svg preserveAspectRatio="none" viewBox="0 0 278 233" fill="none" xmlns="http://www.w3.org/2000/svg" class="cooperation-way__drawing cooperation-way__drawing--dynamics">
                 <use xlink:href="#dynamics"></use>
@@ -29,11 +29,11 @@
         <div class="cooperation-way">
             <div class="cooperation-way__content">
                 <h4 class="heading-4">Instituce a organizace</h4>
-                <div class="cooperation-way__text">
+                <p class="paragraph-1">
                     Přicházím do institucí, organizací
                     a rodin. Vstupuji tam jako host.
                     V průběhu setkávání se stávám jejich součástí. Loučíme se ve vzájemné proměně.
-                </div>
+                </p>
             </div>
             <svg preserveAspectRatio="none" viewBox="0 0 219 203" fill="none" xmlns="http://www.w3.org/2000/svg" class="cooperation-way__drawing cooperation-way__drawing--institutions">
                 <use xlink:href="#institutions"></use>
@@ -42,9 +42,9 @@
         <div class="cooperation-way">
             <div class="cooperation-way__content">
                 <h4 class="heading-4">Individuální konzultace</h4>
-                <div class="cooperation-way__text">
+                <p class="paragraph-1">
                     Kapacita pro individuální konzultace je naplněna, nové klienty v současné době nepřijímám.
-                </div>
+                </p>
             </div>
             <svg preserveAspectRatio="none" viewBox="0 0 219 203" fill="none" xmlns="http://www.w3.org/2000/svg" class="cooperation-way__drawing cooperation-way__drawing--consultations">
                 <use xlink:href="#consultations"></use>
