--- a/App/Views/includes/profile.html
+++ b/App/Views/includes/profile.html
@@ -7,18 +7,9 @@
   >
     <use xlink:href="#timber"></use>
   </svg>
-  <svg
-    class="profile__svg profile__svg--root"
-    viewBox="0 0 886 265"
-    fill="none"
-    xmlns="http://www.w3.org/2000/svg"
-    preserveAspectRatio="none"
-  >
-    <use xlink:href="#root"></use>
-  </svg>
   <img src="img/profile.jpg" alt="" class="profile__photo" />
   <div class="profile__text">
-    <div class="profile__p">
+    <p class="paragraph-1">
       Jmenuji se MUDr. Taťjana Horká, desítky let se zabývám konzultační
       činnosti v oblasti mezilidských vztahů. V roce 2020 jsem se rozhodla
       ukončit svoji třicetiletou lékařskou praxi. Pracovala jsem v oborech
@@ -26,12 +17,12 @@
       jsem se individuální, párové a rodinné psychoterapii. Aktuálně se chci
       setkávat s lidmi prostřednictvím rozhovoru, bez diagnostiky, bez
       předepisování léků.
-    </div>
-    <div class="profile__p">
+    </p>
+    <p class="paragraph-1">
       Nabízím společný čas, svůj (ne)klid a zkušenosti. Konzultační činnost
       provozuji ve formě workshopů, seminářů, interaktivních besed a přednášek.
       Orientuji se na skupinovou práci (optimální počet ve skupině je 5-15
       lidí).
-    </div>
+    </p>
   </div>
 </section>
