--- a/App/Views/includes/footer.html
+++ b/App/Views/includes/footer.html
@@ -9,9 +9,9 @@
                 </div>
                 <div class="footer__columns__column">
                     <h5 class="heading-5">Cena za konzultační služby</h5>
-                    <p class="paragraph-1">Individuální konzultační hodina / 2 500 Kč</p>
-                    <p class="paragraph-1">Párová konzultační hodina / 3 700 Kč</p>
-                    <p class="paragraph-1 paragraph-1__break">Skupinová práce hodina / 5 000 Kč</p>
+                    <p class="paragraph-1">Individuální konzultační hodina / 2&nbsp;500&nbsp;Kč</p>
+                    <p class="paragraph-1">Párová konzultační hodina / 3&nbsp;700&nbsp;Kč</p>
+                    <p class="paragraph-1 paragraph-1__break">Skupinová práce hodina / 5&nbsp;000&nbsp;Kč</p>
                     <p class="paragraph-1">Cestovní náhrady jsou stanoveny podle počtu kilometrů</p>
                 </div>
                 <div class="footer__columns__column footer__columns__help">
