--- a/App/Views/includes/topics.html
+++ b/App/Views/includes/topics.html
@@ -2,7 +2,9 @@
     <svg class="topics__svgTop" width="591" height="592" viewBox="0 0 591 592" fill="none" xmlns="http://www.w3.org/2000/svg">
         <use xlink:href="#decorationShape"></use> 
     </svg>
-    <img src="img/leafs.jpg" alt="rose" class="topics__img__regular">
+    <div class="topics__img__container">
+        <img src="img/leafs.jpg" alt="rose" class="topics__img__regular">
+    </div>
     <div class="topics__text">
         <div class="topics__text__head">
             <svg class="topics__text__head__svg" width="59" height="65" viewBox="0 0 59 65" fill="none" xmlns="http://www.w3.org/2000/svg">
