--- a/src/client/scss/sections/_cooperation.scss
+++ b/src/client/scss/sections/_cooperation.scss
@@ -3,10 +3,7 @@ $bp-cooperation-mobile: 800px;
 //
 .cooperation {
     width: 100%;
-    padding-top: 15rem;
-    padding-left: 10rem;
-    padding-right: 10rem;
-    padding-bottom: 15rem;
+    padding: 25rem 20rem;
 
     position: relative;
 
@@ -21,7 +18,7 @@ $bp-cooperation-mobile: 800px;
     }
 
     & .heading-3 {
-        margin-left: 11rem;
+        margin-left: 8rem;
         margin-bottom: 10rem;
 
         position: relative;
@@ -59,7 +56,7 @@ $bp-cooperation-mobile: 800px;
     }
     &__container {
         display: flex;
-        justify-content: space-around;
+        justify-content: space-between;
 
         @media screen and (max-width: 1300px) {
             flex-wrap: wrap;
