--- a/src/client/scss/sections/_footer.scss
+++ b/src/client/scss/sections/_footer.scss
@@ -1,97 +1,44 @@
 .footer {
     width: 100vw;
-    padding: 10rem;
+    padding: 15rem 20rem;
     background-color: $color-green-footer;
 
     color: white;
 
     position: relative;
 
-    @media only screen and (max-width: 800px) {
+    @media only screen and (max-width: 1450px) {
+        padding: 15rem;
+    }
+    @media only screen and (max-width: 1250px) {
+        padding: 10rem;
+    }
+    @media only screen and (max-width: 1150px) {
+        padding: 7.5rem;
+    }
+    @media only screen and (max-width: 500px) {
         padding: 5rem;
     }
-    @media only screen and (max-width: 680px) {
-        height: 105rem;
-
-        padding: 5rem 10rem;
-    }
-    @media only screen and (max-width: 580px) {
-        padding: 3rem 5rem;
-    }
-    @media only screen and (max-width: 510px) {
-        height: 85rem;
-    }
-    @media only screen and (max-width: 370px) {
-        padding: 3rem 1rem;
+    @media only screen and (max-width: 500px) {
+        padding: 5rem 3rem;
     }
 
-    &__stain {
-        position: absolute;
-        right: -10%;
-        top: -25%;
-
-        @media only screen and (max-width: 1200px) {
-            width: 30rem;
-            height: 30rem;
-
-            top: -10%;
-        }
-        @media only screen and (max-width: 800px) {
-            display: none;
-        }
-    }
-    &__root{
-        width: 80rem;
-        height: 30rem;
-
-        position: absolute;
-        right: 0;
-        top: -35%;
-        
-        transform: scaleX(-1);
-
-        @media only screen and (max-width: 1200px) {
-            width: 50rem;
-            height: 20rem;
-
-            top: -30%;
-        }
-        @media only screen and (max-width: 1000px) {
-            top: -35%;
-        }
-        @media only screen and (max-width: 800px) {
-            top: -15%;
-        }
-        @media only screen and (max-width: 510px) {
-            width: 25rem;
-            height: 10rem;
-
-            top: -9%;
-        }
-        
-    }
     &__columns {
         width: 100%;
 
         display: flex;
         flex-direction: row;
         justify-content: space-between;
-
+        
+        @media only screen and (max-width: 1100px) {
+            flex-wrap: wrap;
+        }
         @media only screen and (max-width: 800px) {
             flex-direction: column;
             justify-content: center;
         }
 
         & .paragraph-1 {
-            @media only screen and (max-width: 1400px) {
-                font-size: $font-smallest;
-            }
-            @media only screen and (max-width: 800px) {
-                font-size: $font-regular;
-            }
-            @media only screen and (max-width: 510px) {
-                font-size: $font-smallest;
-            }
             &__break {
                 @media only screen and (max-width: 800px) {
                     margin-bottom: 1rem;
@@ -102,19 +49,26 @@
         &__column {
             &:not(:last-child) {
                 margin-right: 3rem;
+
+                @media only screen and (max-width: 1100px) {
+                    width: 50%;
+                    margin-right: 0;
+                    margin-bottom: 3rem;
+                }
+                @media only screen and (max-width: 800px) {
+                    width: 100%;
+                }
             }
         }
         
         &__help {
             position: relative;
 
+            @media only screen and (max-width: 1100px) {
+                width: 100%;
+            }
             @media only screen and (max-width: 1000px) {
                 margin: 1rem;
-            }
-            @media only screen and (max-width: 800px) {
-                width: 100%;
-                margin: 1;
-
             }
 
             /* &__photo {
@@ -164,6 +118,10 @@
                 width: 100%;
 
                 text-align: center;
+
+                @media only screen and (max-width: 1100px) {
+                    text-align: left;
+                }
             }
         }
     }
