--- a/src/client/scss/sections/_organizations.scss
+++ b/src/client/scss/sections/_organizations.scss
@@ -2,7 +2,7 @@
 $bp-organizations-mobile: 800px;
 //
 .organizations {
-    padding-bottom: 15rem;
+    padding-bottom: 20rem;
 
     position: relative;
 
@@ -102,7 +102,7 @@ $bp-organizations-mobile: 800px;
     &__bg {
         height: 40rem;
         background: $color-green;
-        opacity: 0.1;
+        //opacity: 0.1;
         clip-path: url(#organizations-clip-path);
 
         @media screen and (max-width: 500px) {
@@ -111,11 +111,14 @@ $bp-organizations-mobile: 800px;
     }
     &__container {
         margin-top: 15rem;
-        padding: 0 15rem;
+        padding: 0 25rem;
         
         display: flex;
         justify-content: space-between;
 
+        @media only screen and (max-width: 1400px) {
+            padding: 0 15rem;
+        }
         @media screen and (max-width: $bp-organizations-mobile) {
             margin-top: 0;
             padding-top: 20rem;
