TODO list and working email model

--- a/App/Views/admin/includes/navigation.html
+++ b/App/Views/admin/includes/navigation.html
@@ -4,5 +4,6 @@
     <ul class="navigation__list">
         <li class="navigation__item {% if activeLink is same as('home') %}active{% endif %}"><a href="/admin/">Domů</a></li>
         <li class="navigation__item {% if activeLink is same as('events') %}active{% endif %}"><a href="/admin/events">Akce</a></li>
+        <li class="navigation__item {% if activeLink is same as('emails') %}active{% endif %}"><a href="/admin/emails">E-maily</a></li>
     </ul>
 </nav>
